front-end 2nd update

--- a/style2.css
+++ b/style2.css
@@ -1,4 +1,6 @@
 body {
-	text-align: center;
-	margin: 30px;
+   font-family: 'Carter One', cursive;
+   font-size: 20px;
+   text-align: center;
+   margin: 30px;
 }
