--- a/style1.css
+++ b/style1.css
@@ -1,6 +1,13 @@
 body {
+   font-family: 'Carter One', cursive;
+   font-size: 20px;
 	text-align: center;
 	margin: 30px;
+   background: linear-gradient(to right, rgb(255, 251, 0), rgb(0, 253, 255));
+}
+
+#questions {
+   display: inline-flex;
 }
 
 div {
@@ -8,7 +15,7 @@ div {
 }
 
 h1 {
-	border: 2px solid blue;
+	text-decoration: underline;
 }
 
 h2 {
